Fix position of social icons on smaller devices

--- a/debugist/static/css/style.css
+++ b/debugist/static/css/style.css
@@ -29,3 +29,7 @@ main {
 .social-icon {
     margin-top: 15px;
 }
+
+.social-list {
+    margin-top: 20px;
+}
